/me endpoint added to routes.
